--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bun": "^1.2.23",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.544.0",
     "next": "^15.5.4",
