--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
     "lucide-react": "^0.544.0",
     "next": "^15.5.4",
     "next-themes": "^0.4.6",
+    "nextjs-toploader": "^3.9.17",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "server-only": "^0.0.1",
+    "sonner": "^2.0.7",
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.24.2"
