--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^3.0.2",
     "better-auth": "^1.3.26",
     "bun": "^1.3.0",
     "class-variance-authority": "^0.7.1",
@@ -58,6 +60,7 @@
     "nextjs-toploader": "^3.9.17",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
     "resend": "^6.1.3",
