--- a/package.json
+++ b/package.json
@@ -87,7 +87,8 @@
     "tsx": "^4.20.6",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5.8.2",
-    "typescript-eslint": "^8.46.1"
+    "typescript-eslint": "^8.46.1",
+    "vitest": "^4.0.2"
   },
   "ct3aMetadata": {
     "initVersion": "7.39.3"
