--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@types/node": "^20.14.10",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.2.2",
+    "@vitest/ui": "^4.0.4",
     "eslint": "^9.23.0",
     "eslint-config-next": "^15.5.5",
     "postcss": "^8.5.3",
