--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "next": "^15.5.5",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.9.17",
+    "qrcode.react": "^4.2.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
